# tech-berlin-ai-hackathon

./: .gitignore  Makefile  README.md  requirements.txt  speach_to_text.py  text_to_speach.py
frontend/: package-lock.json  package.json
frontend/dev-utils/: mock-data.json
frontend/mock-api/: db.json
frontend/src/: App.tsx
frontend/src/api/: relevantContentEntities.ts
frontend/src/components/Base/Footer/: index.tsx
frontend/src/components/Base/Layout/: Layout.tsx
frontend/src/components/ContentEntity/CollectionEntity/: index.tsx
frontend/src/components/ContentList/: index.tsx
frontend/src/components/Messages/: index.tsx
frontend/src/components/PromptBox/: index.tsx
frontend/src/context/: Location.tsx
frontend/src/pages/HereAndNow/: HereAndNow.tsx
server/: .gitignore  ingestion.py
server/chat_api/: README.md  makefile  pyproject.toml
server/chat_api/app/: chat_service.py  local_service.py  main.py
server/weaviate-experiment/: schema.py  weaviate-connection.py
trial-scripts/: ingestion.py  retrieval_chat.py
trial-scripts/weaviate-experiment/: query.py  schema.py  weaviate-connection.py  writetodatbase.py
web-app/: .env.mock  package-lock.json  package.json  postcss.config.js
web-app/mock-api/: db.json
web-app/src/: App.tsx
web-app/src/api/: chat.ts  relevantContentEntities.ts
web-app/src/components/ContentList/: index.tsx
web-app/src/components/Messages/: index.tsx
web-app/src/components/PromptBox/: index.tsx
web-app/src/context/: Ref.tsx  View.tsx
web-app/src/pages/HereAndNow/: HereAndNow.tsx  LocationView.tsx
(+12 files in other folders)
