[tool.poetry]
name = "poetry add fastapi uvicorn python-dotenv langchain-community langchain-mistralai sentence-transformers"
version = "0.1.0"
description = ""
authors = ["rashmi-carol-dsouza <hello@rashmidsouza.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.34.0"
fastapi = "^0.115.7"
langchain-community = "^0.3.15"
langchain-mistralai = "^0.2.4"
sentence-transformers = "^3.4.0"
faiss-cpu = "^1.9.0.post1"
langchain-huggingface = "^0.1.2"
loguru = "^0.7.3"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
